testdata/baselines/reference/submodule/compiler/reactImportUnusedInNewJSXEmit(jsx=react-jsx).errors.txt
index.tsx(3,1): error TS6133: 'React' is declared but its value is never read.
index.tsx(3,19): error TS2307: Cannot find module 'react' or its corresponding type declarations.
index.tsx(5,10): error TS6133: 'Bar' is declared but its value is never read.


==== index.tsx (3 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    
    import React from "react";
    ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS6133: 'React' is declared but its value is never read.
                      ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    
    function Bar() {
             ~~~
!!! error TS6133: 'Bar' is declared but its value is never read.
      return <div />;
    }
    
    export function Foo() {
      return <Bar />;
    }